2007-10-07   Marc Lorber <Lorber.Marc@wanadoo.fr>

	reviewed by: Johannes Schmid <jhs@gnome.org>

	* plugins/Makefile.am:
	* plugins/build-basic-autotools/build-basic-autotools.c:
	(build_compile_file_real):
	* plugins/search/search-replace.c:
	* plugins/valgrind/preferences.c: (build_general_prefs):
	
	Fix #484379 – Contents of Makefile.am plugins and
	#484419 – Improvement into translation

2007-10-06  Johannes Schmid <jhs@gnome.org>

	* libanjuta/interfaces/anjuta-idl-compiler.pl:

	Fixed to properly support pointer-to-pointer (**) types

	* libanjuta/interfaces/libanjuta.idl:
	* plugins/sourceview/sourceview-cell.c: (sourceview_cell_get_iter):
	* plugins/sourceview/sourceview-cell.h:
	* plugins/sourceview/sourceview.c: (ieditor_get_position_iter),
	(ieditor_iface_init), (iselect_set_iter), (iselect_get_start_iter),
	(iselect_get_end_iter), (iselect_iface_init), (isearch_forward),
	(isearch_backward), (isearch_iface_init):
	* plugins/editor/text_editor.c: (itext_editor_get_position_iter),
	(itext_editor_iface_init), (iselection_set_iter),
	(iselection_get_start_iter), (iselection_get_end_iter),
	(iselection_iface_init), (isearch_forward), (isearch_backward),
	(isearch_iface_init):
	
	Added IAnjutaEditorSearch interface and some utility methods to
	migrate from positions to iterators for the editor interface.
	
	* plugins/document-manager/Makefile.am:
	* plugins/document-manager/action-callbacks.c:
	(on_goto_line_no1_activate), (on_show_search):
	* plugins/document-manager/action-callbacks.h:
	* plugins/document-manager/anjuta-docman.c:
	(anjuta_docman_add_document), (anjuta_docman_show_editor),
	(anjuta_docman_grab_text_focus):
	* plugins/document-manager/anjuta-document-manager.ui:
	* plugins/document-manager/goto_line.c: (removed)
	* plugins/document-manager/goto_line.h: (removed)
	* plugins/document-manager/search-box.c:
	* plugins/document-manager/search-box.h:
	* plugins/document-manager/plugin.c: (ui_give_shorter_names),