@@ -364,13 +364,13 @@ on_search_activated (GtkWidget* widget, SearchBox* search_box)
 			{
 				found = TRUE;
 				anjuta_status_push (private->status, 
-									"Search for \"%s\" reached end and was continued on top!", search_text);
+									_("Search for \"%s\" reached end and was continued on top!"), search_text);
 			}
 			else if (ianjuta_editor_selection_has_selection (selection, NULL))
 			{
 				anjuta_status_pop (private->status);
 				anjuta_status_push (private->status, 
-									"Search for \"%s\" reached end and was continued on top but no new match was found!", search_text);
+									_("Search for \"%s\" reached end and was continued on top but no new match was found!"), search_text);
 			}				
 		}
 	}
