@@ -1,3 +1,7 @@
+2007-10-08  Johannes Schmid <jhs@gnome.org>
+
+	* POTFILES.in: Updated
+
 2007-10-07  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
         * es.po: Updated Spanish translation.
